--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="개발자">
+    <meta property="og:description" content="설명">
+    <meta property="og:image" content="https://raw.githubusercontent.com/qus0in/dev_intro/refs/heads/main/smart_person.jpg">
     <link
       rel="icon"
       type="image/png"
